styles/works.module.css
.container {
  width: 100%;
  height: 100%;
  display: flex;
  overflow: hidden;
  border-radius: 30px;
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 350px));
  grid-auto-rows: minmax(210px, 300px);
  grid-gap: 1em;
  justify-content: space-around;
  align-items: center;
  overflow-x: hidden;
  padding: 10px 10px;
  margin-bottom: 70px;
}
@media (min-width: 822px) {
  .grid {
    width: 100%;
    grid-template-columns: repeat(auto-fit, minmax(200px, 400px));
    padding: 10px 0px;
  }
}

@media (min-width: 1024px) {
  .grid {
    padding: 30px;
    margin-bottom: 0;
    margin-left: 70px;
  }
}
@media (min-width: 1382px) {
  .grid {
    overflow-y: hidden;
    margin-left: 70px;
  }
}
.grid_item {
  width: 100%;
  height: 100%;
  perspective: 1000px;
  justify-self: center;
  cursor: pointer;
  margin-left: auto;
  margin-right: auto;
}
.grid_item_inner {
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  box-shadow: rgba(255, 255, 255, 0.05) -2px -2px 3px,
    rgba(0, 0, 0, 0.2) 3px 3px 3px;
  z-index: 0;
  border-radius: 15px;
}

.front,
.back {
  width: 100%;
  height: 100%;
  overflow: hidden;
  backface-visibility: hidden;
  border-radius: 15px;

  position: absolute;
}

.front {
  z-index: 0;
}
.front img {
  filter: brightness(0.6);
}
.back {
  transform: rotateY(180deg);
  background: rgb(58, 56, 96);
  cursor: default;
}

.front .title {
  position: absolute;
  bottom: 0px;
  width: 100%;
  background: rgba(0, 0, 0, 0.4);
  display: flex;
}
.title p {
  font-size: 1.3em;
  color: white;
  margin-left: auto;
  margin-right: 1em;
  text-align: right;
}

.close {
  position: absolute;
  right: 20px;
  top: 20px;
  font-size: 25px;
  line-break: 18px;
  color: #e6e6e6;
  cursor: pointer;
}

.card_grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  gap: 0em 1em;
  max-width: 1310px;
  grid-template-areas: "card_img" "chart" "card_info";
}

@media (min-width: 822px) {
  .card_grid {
    /* grid-template-columns: 36.2% 1fr; */
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr auto;
    grid-template-areas: "card_img card_info" "card_img card_info" "card_img card_info" "chart card_info" "chart card_info";
  }
}
.card_info {
  grid-area: card_info;
  padding: 35px 15px;
}
.card_img {
  display: grid;
  justify-content: center;
}
.card_img img {
  width: 100%;
}

.card_chart {
  height: 200px;
  background-color: rgb(58, 56, 96);
  display: flex;
  /* width: 90%; */
  margin: 0 auto 0;
  width: 100%;
}
.card_chart canvas {
  background: rgba(255, 255, 255, 0.5);
  box-shadow: -2px -2px 3px rgba(255, 255, 255, 0.05),
    3px 3px 3px rgba(0, 0, 0, 0.2);
  border-radius: 15px;
}
@media (min-width: 822px) {
  .card_chart {
    width: 90%;
    height: 260px;
  }
}
.card_title {
  display: flex;
}
.card_title p {
  line-height: 1;
  margin: 0;
  font-size: 1.7rem;
  font-family: "Poppins", sans-serif;
  font-weight: bold;
}

.card_info {
  display: flex;
  flex-direction: column;
  padding: 0px 40px 20px 0;
}
.card_chip {
  font-size: 0.7em;
  background: #272641;
  border-radius: 15px;
  box-shadow: -2px -2px 3px rgba(255, 255, 255, 0.05),
    3px 3px 3px rgba(0, 0, 0, 0.2);
  color: white;
  cursor: pointer;
  padding: 3px 14px;
  margin: 5px 5px;
}
.card_chip:hover {
  color: #272641;
  background: #e6e6e6;
}
.no_hover {
  cursor: default;
}
.no_hover:hover {
  color: #e6e6e6;
  background: #272641;
}
.card_duties {
  display: flex;
  flex-direction: column;
}
.card_duties .card_chip {
  margin: 5px 0 5px 20px;
  font-size: 0.9em;
}
.card_tech_stack {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 1em 0;
}

.card_links a {
  font-size: 0.9em;
}
.links_container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-left: 14px;
}
.card_description,
.card_links a,
.card_links,
.card_duties,
.card_tech_stack,
.card_title {
  color: #e6e6e6;
}

::-webkit-scrollbar.works_back {
  height: 98%;
}

